--- a/INI/art.ini
+++ b/INI/art.ini
@@ -8248,6 +8248,711 @@ DetailLevel=1
 Theater=yes
 Foundation=1x1
 
+
+
+
+
+[BDINDEB1]
+Image      = INVISO
+Elasticity = 0.0
+MaxXYVel   = 20.0
+MinZVel    = 7.0
+LoopStart  = 0
+LoopEnd    = 5
+LoopCount  = -1
+Bouncer    = yes
+ExpireAnim = BDPIFF5
+
+[BDPIFF5]
+Translucency = 50 ;must
+RandomRate   = 220,250  ;can be replaced with Rate
+DetailLevel  = 1
+
+[BDSMLEXP2]
+Translucency      = 50 ;must
+RandomRate        = 220,250  ;can be replaced with Rate
+Start             = 0
+End               = 15
+TrailerSeperation = 18  ;must be 50%/100% of End frames
+TrailerAnim       = BDINDEB1
+DetailLevel       = 1
+
+[BDSMLEXP3]
+Translucency      = 50 ;must
+RandomRate        = 220,250  ;can be replaced with Rate
+Start             = 0
+End               = 15
+TrailerSeperation = 18  ;must be 50%/100% of End frames
+TrailerAnim       = BDINDEB1
+DetailLevel       = 1
+
+[FIRE5]
+Surface        = yes
+Rate           = 300 ;fire
+LoopCount      = 2
+UseNormalLight = yes
+Translucency   = 25
+
+[FIRE6]
+Image          = FIRE5
+Rate           = 300 ;fire
+Surface        = yes
+LoopCount      = 3
+UseNormalLight = yes
+Translucency   = 25
+
+[FIREINDEB]
+Image       = INVISO
+Elasticity  = 0.0
+MaxXYVel    = 7.0
+MinZVel     = 12.0
+ExpireAnim  = FIRE6
+LoopStart   = 0
+LoopEnd     = 1
+LoopCount   = -1
+DetailLevel = 0
+Bouncer     = yes
+
+[HEHIT1]
+Image             = INVISO
+Start             = 0
+End               = 1
+TrailerAnim       = SPKDEB
+TrailerSeperation = 1
+Next              = TWLT026
+
+[HEHIT2]
+Image             = INVISO
+Start             = 0
+End               = 1
+TrailerAnim       = SPKDEB2
+TrailerSeperation = 1
+Next              = TWLT036
+Rate              = 450
+
+[HEHIT3]
+Image             = INVISO
+Start             = 0
+End               = 2
+TrailerAnim       = BDINDEB1
+TrailerSeperation = 1
+Next              = TWLT050
+Rate              = 450
+
+[HEHIT4]
+Image             = INVISO
+Start             = 0
+End               = 3
+TrailerAnim       = BDINDEB1
+TrailerSeperation = 1
+Next              = TWLT070
+Rate              = 450
+
+[SPKDEB]
+UseNormalLight = yes
+Elasticity     = 0.0
+MaxXYVel       = 6.0
+MinZVel        = 6.0
+LoopStart      = 1
+LoopEnd        = 4
+LoopCount      = -1
+DetailLevel    = 0
+Bouncer        = yes
+ExpireAnim     = SPKDECAY
+RandomRate     = 50,450
+AltPalette     = yes
+
+[SPKDEB2]
+UseNormalLight = yes
+Elasticity     = 0.0
+MaxXYVel       = 28.0
+MinZVel        = 10.0
+LoopStart      = 1
+LoopEnd        = 4
+LoopCount      = -1
+DetailLevel    = 0
+Bouncer        = yes
+ExpireAnim     = SPKDECAYB
+RandomRate     = 250,900
+AltPalette     = yes
+
+[SPKDECAY]
+Rate           = 750 ;spk
+Flat           = yes
+DetailLevel    = 1
+Surface        = yes
+UseNormalLight = yes
+
+[SPKDECAYB]
+Rate           = 750 ;spk
+Flat           = yes
+DetailLevel    = 1
+Surface        = yes
+UseNormalLight = yes
+
+[BDMED1]
+Translucency = 50 ;must
+RandomRate   = 220,250  ;can be replaced with Rate
+DetailLevel  = 1
+
+[BDPIFF1]
+Translucency = 50 ;must
+RandomRate   = 220,250  ;can be replaced with Rate
+DetailLevel  = 1
+
+[BDPIFF2]
+Translucency = 50 ;must
+RandomRate   = 220,250  ;can be replaced with Rate
+DetailLevel  = 1
+
+[BDPIFF4]
+Translucency = 50 ;must
+RandomRate   = 220,250  ;can be replaced with Rate
+DetailLevel  = 1
+
+[BDSMLEXP1]
+Translucency = 50 ;must
+RandomRate   = 220,250  ;can be replaced with Rate
+Start        = 0
+End          = 15
+DetailLevel  = 1
+
+[DBRFIRE]
+Image        = INVISO
+Elasticity   = 0.0
+MaxXYVel     = 8.0
+MinZVel      = 45.0
+ExpireAnim   = FIRE5B
+Damage       = 5
+DamageRadius = 50
+Warhead      = HollowPoint
+LoopStart    = 0
+LoopEnd      = 1
+LoopCount    = -1
+DetailLevel  = 0
+Bouncer      = yes
+Spawns       = FIRE4B
+SpawnCount   = 1
+
+[DDECAY1]
+Rate        = 50 ;decay
+Flat        = yes
+DetailLevel = 1
+Surface     = yes
+
+[DDECAY2]
+Rate        = 50 ;decay
+Flat        = yes
+DetailLevel = 1
+Surface     = yes
+
+[DDECAY3]
+Rate        = 50 ;decay
+Flat        = yes
+DetailLevel = 1
+Surface     = yes
+
+[DDECAY4]
+Rate        = 50 ;decay
+Flat        = yes
+DetailLevel = 1
+Surface     = yes
+
+[DDECAY5]
+Rate        = 50 ;decay
+Flat        = yes
+DetailLevel = 1
+Surface     = yes
+
+[DDECAYL1]
+Rate        = 50 ;decay
+Flat        = yes
+DetailLevel = 1
+Surface     = yes
+
+[DDECAYL10]
+Rate        = 50 ;decay
+Flat        = yes
+DetailLevel = 1
+Surface     = yes
+
+[DDECAYL2]
+Rate        = 50 ;decay
+Flat        = yes
+DetailLevel = 1
+Surface     = yes
+
+[DDECAYL3]
+Rate        = 50 ;decay
+Flat        = yes
+DetailLevel = 1
+Surface     = yes
+
+[DDECAYL4]
+Rate        = 50 ;decay
+Flat        = yes
+DetailLevel = 1
+Surface     = yes
+
+[DDECAYL5]
+Rate        = 50 ;decay
+Flat        = yes
+DetailLevel = 1
+Surface     = yes
+
+[DDECAYL7]
+Rate        = 50 ;decay
+Flat        = yes
+DetailLevel = 1
+Surface     = yes
+
+[DDECAYL8]
+Rate        = 50 ;decay
+Flat        = yes
+DetailLevel = 1
+Surface     = yes
+
+[EXCITER]
+Voxel           = no
+Remapable       = yes
+Cameo           = EXCIICON
+PrimaryFireFLH  = 130,30,130
+UseTurretShadow = yes
+WalkFrames      = 16
+StandingFrames  = 1
+StartWalkFrame  = 0
+StartStandFrame = 160
+
+[FIRE4B]
+Image          = FIRE4
+Surface        = yes
+Rate           = 300 ;fire
+LoopCount      = 4
+UseNormalLight = yes
+Translucency   = 25
+Next           = FIRE5B
+
+[FIRE5B]
+Image          = FIRE5
+Surface        = yes
+Rate           = 300 ;fire
+LoopCount      = 2
+UseNormalLight = yes
+Translucency   = 50
+
+[FIRE8]
+Surface        = yes
+LoopCount      = 8
+Rate           = 300 ;fire
+UseNormalLight = yes
+Translucency   = 20
+Next           = SMOKE_M
+
+[SMOKE_F]
+Rate         = 750
+Translucency = 50
+AltPalette   = yes
+
+[SMOKE_M]
+LoopCount    = 8
+Translucency = 50
+Next         = SMOKE_F
+LoopStart    = 38
+LoopEnd      = 91
+AltPalette   = yes
+
+[SPKDEBC]
+UseNormalLight = yes
+Image          = SPKDEB
+Elasticity     = 0.0
+MaxXYVel       = 12.0
+MinZVel        = 7.0
+LoopStart      = 1
+LoopEnd        = 4
+LoopCount      = -1
+DetailLevel    = 0
+Bouncer        = yes
+ExpireAnim     = SPKDECAYC
+RandomRate     = 120,650
+AltPalette     = yes
+
+[SPKDECAYC]
+Rate           = 750 ;spk
+Flat           = yes
+DetailLevel    = 1
+Surface        = yes
+UseNormalLight = yes
+
+[S_TBANG16]
+Normalized     = yes
+Translucent    = yes
+UseNormalLight = yes
+Rate           = 450
+
+[S_TBANG58]
+Normalized        = yes
+Translucent       = yes
+Report            = EXPNEW10
+UseNormalLight    = yes
+Crater            = yes
+Scorch            = yes
+Start             = 0
+End               = 10
+TrailerAnim       = TDEB1SM
+TrailerSeperation = 5
+Rate              = 450
+Next              = FIRE3 ;3
+
+[TDEB1LG]
+UseNormalLight = yes
+Elasticity     = 0.0
+MaxXYVel       = 15.0
+MinZVel        = 25.0
+ExpireAnim     = S_TBANG16
+Damage         = 50
+DamageRadius   = 80
+Warhead        = HE
+LoopStart      = 0
+LoopEnd        = 15
+LoopCount      = -1
+RandomRate     = 220,600
+DetailLevel    = 0
+Bouncer        = yes
+Spawns         = TDEB1SM
+SpawnCount     = 1
+
+[TDEB1SM]
+UseNormalLight = yes
+Elasticity     = 0.0
+MaxXYVel       = 15.0
+MinZVel        = 15.0
+ExpireAnim     = BDPIFF2
+LoopStart      = 0
+LoopEnd        = 15
+LoopCount      = -1
+RandomRate     = 220,600
+DetailLevel    = 0
+Bouncer        = yes
+
+[TDEB2LG]
+UseNormalLight = yes
+Elasticity     = 0.0
+MaxXYVel       = 15.0
+MinZVel        = 25.0
+ExpireAnim     = S_TBANG16
+Damage         = 50
+DamageRadius   = 80
+Warhead        = HE
+LoopStart      = 0
+LoopEnd        = 15
+LoopCount      = -1
+RandomRate     = 220,600
+DetailLevel    = 0
+Bouncer        = yes
+Spawns         = TDEB2SM
+SpawnCount     = 1
+
+[TDEB2SM]
+UseNormalLight = yes
+Elasticity     = 0.0
+MaxXYVel       = 15.0
+MinZVel        = 15.0
+ExpireAnim     = BDPIFF4
+LoopStart      = 0
+LoopEnd        = 15
+LoopCount      = -1
+RandomRate     = 220,600
+DetailLevel    = 0
+Bouncer        = yes
+
+[TDEB3LG]
+UseNormalLight = yes
+Elasticity     = 0.0
+MaxXYVel       = 15.0
+MinZVel        = 25.0
+ExpireAnim     = S_TBANG16
+Damage         = 50
+DamageRadius   = 80
+Warhead        = HE
+LoopStart      = 0
+LoopEnd        = 15
+LoopCount      = -1
+RandomRate     = 220,600
+DetailLevel    = 0
+Bouncer        = yes
+Spawns         = TDEB1SM
+SpawnCount     = 1
+
+[VEXP1]
+Image             = INVISO
+Crater            = yes
+Start             = 0
+End               = 1
+TrailerAnim       = DBRIS1LG
+TrailerSeperation = 10
+Next              = VEXP1B
+
+[VEXP1B]
+Image             = INVISO
+Start             = 0
+End               = 3
+Rate              = 450
+TrailerAnim       = DBRIS1SM
+TrailerSeperation = 1
+Next              = VEXP1C
+
+[VEXP1C]
+Image             = INVISO
+Start             = 0
+End               = 2
+TrailerAnim       = DBRIS2LG
+TrailerSeperation = 1
+Next              = VEXP1D
+
+[VEXP1D]
+Image             = INVISO
+Start             = 0
+End               = 3
+Rate              = 450
+TrailerAnim       = DBRIS2SM
+TrailerSeperation = 1
+Next              = VEXP1E
+
+[VEXP1E]
+Image             = INVISO
+Start             = 0
+End               = 2
+TrailerAnim       = DBRIS3LG
+TrailerSeperation = 1
+Next              = TWLT070
+
+[VEXP2]
+Image             = INVISO
+Crater            = yes
+Start             = 0
+End               = 1
+TrailerAnim       = DBRIS1LG
+TrailerSeperation = 10
+Next              = VEXP2B
+
+[VEXP2B]
+Image             = INVISO
+Start             = 0
+End               = 2
+TrailerAnim       = DBRIS5LG
+TrailerSeperation = 1
+Next              = VEXP2C
+
+[VEXP2C]
+Image             = INVISO
+Start             = 0
+End               = 3
+Rate              = 450
+TrailerAnim       = DBRIS3SM
+TrailerSeperation = 1
+Next              = VEXP2D
+
+[VEXP2D]
+Image             = INVISO
+Start             = 0
+End               = 4
+Rate              = 450
+TrailerAnim       = DBRIS4SM
+TrailerSeperation = 1
+Next              = VEXP2E
+
+[VEXP2E]
+Image             = INVISO
+Start             = 0
+End               = 2
+TrailerAnim       = DBRS10LG
+TrailerSeperation = 1
+Next              = VFXEXP5
+
+[VEXP3]
+Image             = INVISO
+Crater            = yes
+Start             = 0
+End               = 1
+TrailerAnim       = DBRIS1LG
+TrailerSeperation = 10
+Next              = VEXP3B
+
+[VEXP3B]
+Image             = INVISO
+Start             = 0
+End               = 2
+TrailerAnim       = DBRIS7LG
+TrailerSeperation = 1
+Next              = VEXP3C
+
+[VEXP3C]
+Image             = INVISO
+Start             = 0
+End               = 3
+Rate              = 450
+TrailerAnim       = DBRIS5SM
+TrailerSeperation = 1
+Next              = VEXP3D
+
+[VEXP3D]
+Image             = INVISO
+Start             = 0
+End               = 4
+Rate              = 450
+TrailerAnim       = DBRIS6SM
+TrailerSeperation = 1
+Next              = VEXP3E
+
+[VEXP3E]
+Image             = INVISO
+Start             = 0
+End               = 2
+TrailerAnim       = DBRIS8LG
+TrailerSeperation = 1
+Next              = S_BRNL58
+
+[VEXP4]
+Image             = INVISO
+Crater            = yes
+Start             = 0
+End               = 1
+TrailerAnim       = DBRIS1LG
+TrailerSeperation = 10
+Next              = VEXP4B
+
+[VEXP4B]
+Image             = INVISO
+Start             = 0
+End               = 2
+TrailerAnim       = DBRIS1LG
+TrailerSeperation = 1
+Next              = VEXP4C
+
+[VEXP4C]
+Image             = INVISO
+Start             = 0
+End               = 3
+Rate              = 450
+TrailerAnim       = DBRIS7SM
+TrailerSeperation = 1
+Next              = VEXP4D
+
+[VEXP4D]
+Image             = INVISO
+Start             = 0
+End               = 4
+Rate              = 450
+TrailerAnim       = DBRIS8SM
+TrailerSeperation = 1
+Next              = VEXP4E
+
+[VEXP4E]
+Image             = INVISO
+Start             = 0
+End               = 2
+TrailerAnim       = DBRIS2LG
+TrailerSeperation = 1
+Next              = S_CLSN58
+
+[VEXP5]
+Image             = INVISO
+Crater            = yes
+Start             = 0
+End               = 1
+TrailerAnim       = DBRIS1LG
+TrailerSeperation = 10
+Next              = VEXP5B
+
+[VEXP5B]
+Image             = INVISO
+Start             = 0
+End               = 2
+TrailerAnim       = DBRIS4LG
+TrailerSeperation = 1
+Next              = VEXP5C
+
+[VEXP5C]
+Image             = INVISO
+Start             = 0
+End               = 3
+Rate              = 450
+TrailerAnim       = DBRIS9SM
+TrailerSeperation = 1
+Next              = VEXP5D
+
+[VEXP5D]
+Image             = INVISO
+Start             = 0
+End               = 4
+Rate              = 450
+TrailerAnim       = DBRS10SM
+TrailerSeperation = 1
+Next              = VEXP5E
+
+[VEXP5E]
+Image             = INVISO
+Start             = 0
+End               = 2
+TrailerAnim       = DBRIS5LG
+TrailerSeperation = 1
+Next              = S_TUMU60
+
+[VEXPT1]
+Image             = INVISO
+Crater            = yes
+Scorch            = yes
+Start             = 0
+End               = 3
+TrailerAnim       = TDEB1LG
+TrailerSeperation = 1
+Next              = VEXPT1B
+
+[VEXPT1B]
+Image             = INVISO
+Start             = 0
+End               = 2
+TrailerAnim       = TDEB1SM
+TrailerSeperation = 1
+Next              = VEXPT1C
+
+[VEXPT1C]
+Image             = INVISO
+Start             = 0
+End               = 1
+TrailerAnim       = TDEB2LG
+TrailerSeperation = 1
+Next              = VEXPT1D
+
+[VEXPT1D]
+Image             = INVISO
+Start             = 0
+End               = 2
+TrailerAnim       = TDEB2SM
+TrailerSeperation = 1
+Next              = VEXPT1E
+
+[VEXPT1E]
+Image             = INVISO
+Start             = 0
+End               = 3
+TrailerAnim       = TDEB3LG
+TrailerSeperation = 1
+Next              = S_TBANG58
+
+[VFXEXP5]
+Normalized     = yes
+Translucent    = yes
+Report         = EXPNEW13
+UseNormalLight = yes
+Crater         = yes
+Scorch         = yes
+Next           = FIRE3
+
+
+
+
+
 ; *** Movies ***
 ; Each of the movies allowed in the game will be listed
 ; here.
