--- a/INI/rules.ini
+++ b/INI/rules.ini
@@ -2017,6 +2017,8 @@ DestroyWalls=no
 118=NHUNTER
 119=MOBILEMP
 
+120 = EXCITER
+
 
 ; harvester
 [HARV]
@@ -19330,6 +19332,261 @@ RechargeTime=7  ;was 6
 Type=DropPod
 Action=DropPod
 SidebarImage=PODSICON
+
+
+
+
+
+
+[EXCITER]
+Name                        = Exciter
+WalkRate                    = 2
+AIBuildThis                 = yes
+Prerequisite                = GAWEAP
+Primary                     = 120mmx
+Strength                    = 300
+Category                    = AFV
+Armor                       = heavy
+Turret                      = yes
+IsTilter                    = no
+TargetLaser                 = yes
+TooBigToFitUnderBridge      = true
+AllowedToStartInMultiplayer = no
+TechLevel                   = 3
+Sight                       = 8
+Speed                       = 3
+CrateGoodie                 = yes
+Crusher                     = yes
+Owner                       = GDI
+Cost                        = 800
+Points                      = 25
+ROT                         = 5
+Explosion                   = TWLT070,S_BANG48,S_BRNL58,S_CLSN58,S_TUMU60
+VoiceSelect                 = 25-I000,25-I002,25-I004,25-I006
+VoiceMove                   = 25-I012,25-I014,25-I016,25-I018,25-I022
+VoiceAttack                 = 25-I014,25-I022,25-I024,25-I026
+VoiceFeedback               = 
+MaxDebris                   = 7
+DebrisTypes                 = PIECE
+DebrisMaximums              = 7
+Locomotor                   = {55D141B8-DB94-11d1-AC98-006008055BB5}
+MovementZone                = Destroyer
+ThreatPosed                 = 40	; This value MUST be 0 for all building addons
+DamageParticleSystems       = SparkSys,SmallGreySSys
+DamageSmokeOffset           = 100, 100, 275
+Weight                      = 3.5
+VeteranAbilities            = SELF_HEAL,STRONGER
+EliteAbilities              = SENSORS,ROF,FIREPOWER,FASTER
+Accelerates                 = false
+ZFudgeColumn                = 8
+ZFudgeTunnel                = 13
+
+[DEBV1]
+Elasticity         = 0.0
+MinAngularVelocity = 22.0
+MaxAngularVelocity = 34.0
+Duration           = 150
+MinZVel            = 30.5
+MaxZVel            = 55.0
+MaxXYVel           = 12.0
+ExpireAnim         = S_BANG16
+DamageRadius       = 50
+Damage             = 20
+Warhead            = HE
+
+[DEBV2S]
+Elasticity         = 0.0
+MinAngularVelocity = 5.0
+MaxAngularVelocity = 15.0
+Duration           = 150
+MinZVel            = 30.5
+MaxZVel            = 62.0
+MaxXYVel           = 18.0
+ExpireAnim         = S_BANG16
+DamageRadius       = 50
+Damage             = 20
+Warhead            = HE
+
+[DEBV3]
+Elasticity         = 0.0
+Duration           = 150
+MinZVel            = 30.5
+MaxZVel            = 55.0
+MaxXYVel           = 12.0
+ExpireAnim         = S_BANG16
+DamageRadius       = 50
+Damage             = 20
+Warhead            = HE
+MinAngularVelocity = 5.0
+MaxAngularVelocity = 15.0
+
+[DEBV4]
+Elasticity         = 0.0
+MinAngularVelocity = 5.0
+Duration           = 150
+MinZVel            = 30.5
+MaxZVel            = 55.0
+MaxXYVel           = 18.0
+ExpireAnim         = S_BANG16
+DamageRadius       = 50
+Damage             = 20
+Warhead            = HE
+MaxAngularVelocity = 15.0
+
+[DEBV5]
+Elasticity         = 0.0
+MinAngularVelocity = 5.0
+MaxAngularVelocity = 15.0
+Duration           = 150
+MinZVel            = 30.5
+MaxZVel            = 55.0
+MaxXYVel           = 18.0
+ExpireAnim         = S_BANG16
+DamageRadius       = 50
+Damage             = 20
+Warhead            = HE
+
+[DebriFire]
+Image              = S_BANG16
+MaxEC              = 80
+Velocity           = 20.0
+Deacc              = 0.05
+WindEffect         = 2
+BehavesLike        = Smoke
+DeleteOnStateLimit = yes
+EndStateAI         = 10
+Translucency       = 25
+StartStateAI       = 4
+
+[DebriFireSys]
+HoldsWhat               = DebriFire
+Spawns                  = yes
+SpawnFrames             = 6
+SpawnRadius             = 3
+ParticleCap             = 15
+SpawnCutoff             = 13.0
+SpawnTranslucencyCutoff = 13.0
+BehavesLike             = Smoke
+
+[FIREVX]
+Elasticity         = 0.2
+MinAngularVelocity = 45.0
+MaxAngularVelocity = 55.0
+MinZVel            = 15.0
+MaxZVel            = 42.0
+MaxXYVel           = 15.0
+Duration           = 150
+DamageRadius       = 50
+Damage             = 1
+Warhead            = HE
+AttachedSystem     = SmallGraySSys2
+BounceAnim         = FIRE8
+ExpireAnim         = FIRE8
+
+[HARV_H]
+Elasticity         = 0.1
+MinAngularVelocity = 5.0
+MaxAngularVelocity = 20.0
+Duration           = 150
+MinZVel            = 20.5
+MaxZVel            = 45.0
+MaxXYVel           = 24.0
+ExpireAnim         = VEXPT1
+DamageRadius       = 50
+Damage             = 150
+Warhead            = HE
+BounceAnim         = BDMED1
+AttachedSystem     = DebriFireSys
+
+[INVVX]
+Elasticity         = 0.0
+MinAngularVelocity = 5.0
+MaxAngularVelocity = 15.0
+MinZVel            = 48.0
+MaxZVel            = 52.0
+MaxXYVel           = 48.0
+Duration           = 15
+DamageRadius       = 50
+Damage             = 1
+Warhead            = HE
+AttachedSystem     = SmallGraySSys4
+
+[INVVX2]
+Elasticity         = 0.0
+MinAngularVelocity = 5.0
+MaxAngularVelocity = 15.0
+MinZVel            = 48.0
+MaxZVel            = 52.0
+MaxXYVel           = 48.0
+Duration           = 15
+DamageRadius       = 50
+Damage             = 1
+Warhead            = HE
+AttachedSystem     = SmallGraySSys3
+
+[SmallGraySSys2]
+HoldsWhat               = SmallGraySmoke2
+Spawns                  = yes
+SpawnFrames             = 1
+SpawnRadius             = 3
+ParticleCap             = 8
+SpawnCutoff             = 10.0
+SpawnTranslucencyCutoff = 10.0
+BehavesLike             = Smoke
+
+[SmallGraySSys3]
+HoldsWhat               = SmallGraySmoke3
+Spawns                  = yes
+SpawnFrames             = 6
+SpawnRadius             = 3
+ParticleCap             = 15
+SpawnCutoff             = 13.0
+SpawnTranslucencyCutoff = 13.0
+BehavesLike             = Smoke
+
+[SmallGraySSys4]
+HoldsWhat               = SmallGraySmoke4
+Spawns                  = yes
+SpawnRadius             = 5
+Slowdown                = .0025
+ParticleCap             = 15
+SpawnCutoff             = 10.0
+SpawnTranslucencyCutoff = 9.5
+BehavesLike             = Smoke
+
+[SmallGraySmoke2]
+Image              = VEXPSMK3
+MaxEC              = 80
+Velocity           = 9.0
+Deacc              = .05
+WindEffect         = 2
+BehavesLike        = Smoke
+DeleteOnStateLimit = yes
+EndStateAI         = 6
+StateAIAdvance     = 4
+
+[SmallGraySmoke3]
+Image              = S_BANG24
+MaxEC              = 80
+Velocity           = 20.0
+Deacc              = 0.05
+WindEffect         = 2
+BehavesLike        = Smoke
+DeleteOnStateLimit = yes
+EndStateAI         = 10
+Translucency       = 25
+StartStateAI       = 4
+
+[SmallGraySmoke4]
+Image              = VEXPSMK2
+MaxEC              = 80
+Velocity           = 9.0
+Deacc              = .05
+WindEffect         = 2
+BehavesLike        = Smoke
+DeleteOnStateLimit = yes
+EndStateAI         = 6
+StateAIAdvance     = 4
 
 
 ; ******* Globals Variable Names *******
