--- a/INI/sound01.ini
+++ b/INI/sound01.ini
@@ -360,6 +360,9 @@
 349=AACANON3
 350=SHOTGUN3
 
+351 = TIBE1
+352 = TIBE3
+
 999=BOOP		;Stub sound used for all unsigned sound trigers
 
 
@@ -1355,3 +1358,11 @@ Priority=30
 [TANK6]
 
 [AACANON3]
+
+
+
+[TIBE1]
+Priority = 10
+
+[TIBE3]
+Priority = 10[FK]
